# geth-indexer

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.toml  postgres.conf  postgresql.conf
db/: Cargo.toml  diesel.toml
db/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
db/migrations/2025-03-19-201513_add_indexes_to_transactions/: down.sql  up.sql
db/migrations/2025-03-23-095209_add_tx_type_to_transactions/: down.sql  up.sql
db/migrations/init/: down.sql  up.sql
db/src/: connections.rs  lib.rs  models.rs  schema.rs  types.rs
db/src/providers/: cache.rs  mod.rs  provider.rs
server/: Cargo.toml
server/src/: catchup.rs  config.rs  error.rs  indexer.rs  main.rs  routes.rs  server.rs
src/: catchup.rs  config.rs  error.rs  indexer.rs  main.rs  routes.rs  server.rs
