[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3.0", features = [
    "provider-http",
    "json-rpc",
    "signers",
    "signer-local",
    "signer-mnemonic",
    "rpc-types-eth",
    "network",
    "sol-types",
    "contract",
    "rpc-client",
    "consensus",
    "provider-debug-api",
]}
anyhow = "1.0.95"
async-std = "1.13.0"
axum = "0.7.2"
bytes = "1.5.0"
clap = { version = "3.2.11", features = ["derive"] }
convert_case = "0.6.0"
derive_more = "0.99.17"
dotenvy = "0.15.7"
futures = "0.3.31"
keccak-hasher = "0.15.0"
rand = "0.8.5"
reference-trie = "0.29.1"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.0"
serde_json = "1.0.105"
sha3 = "0.10.8"
sled = "0.34.7"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.5"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
