[workspace]

members = [
    "server",
    "db", 
]
resolver = "2"

[profile.release]
overflow-checks = true
codegen-units = 1
lto = true

[workspace.dependencies]
alloy = "0.3.0"
anyhow = "1.0.92"
async-std = "1.13.0"
bytes = "1.8.0"
chrono = "0.4.38"
clap = { version = "3.2.11", features = ["derive"] }
colored = "2.1.0"
rayon = "1.10.0"
redis = { version = "0.19.0" }
deadpool = "0.12.1"
derive_more = "1.0.0"
diesel = "2.2.4"
diesel-async = "0.5.0"
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
http-body-util = "0.1.2"
itertools = "0.13.0"
keccak-hasher = "0.15.0"
toml = "0.5"
pretty_assertions = "1.4.0"
rand = "0.8.5"
reference-trie = "0.29.1"
reqwest = "0.12.8"
scoped-futures = "0.1.3"
serde = "1.0.214"
serde_json = "1.0.132"
thiserror = "1.0.68"
tokio = { version = "1.41.0", features = ["full"] }
tower-http = "0.6.1"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.17"
triehash = "0.8.4"
url = "2.5.3"
warp = "0.3"
